--- a/style.css
+++ b/style.css
@@ -2,4 +2,10 @@
     border: 2px solid black;
     width: 400px;
     height: 400px;
+    position: relative;
+}
+#meme-text{
+    position: absolute;
+    bottom: 0;
+   
 }
