--- a/style.css
+++ b/style.css
@@ -1,15 +1,18 @@
 #meme-image-container {
-    border: 2px solid black;
+    border: 1px solid black;
     width: 400px;
     height: 400px;
     position: relative;
+    background-color: white;
 }
 #meme-text{
+    text-shadow: 5px 5px 5px black;
+    font-size: 30px;
+    color: white;
     position: absolute;
     bottom: 0;
 }
 #meme-image{
-    border: 2px solid red;
     height: 100%;
     width: 100%;
 }
