--- a/style.css
+++ b/style.css
@@ -16,3 +16,12 @@
     height: 100%;
     width: 100%;
 }
+#fire {
+    background-color: red;
+}
+#water {
+    background-color: blue;
+}
+#earth {
+    background-color: green;
+}
